--- a/test.html
+++ b/test.html
@@ -13,18 +13,7 @@
       top: 0; left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: 9999;
-      pointer-events: none;
-      transform: rotate(180deg) scaleX(-1);
-    }
-    #inputPreview {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 112px;
-      height: 112px;
-      z-index: 10000;
-      border: 1px solid white;
+      z-index: 10;
       pointer-events: none;
       transform: rotate(180deg) scaleX(-1);
     }
@@ -57,163 +46,48 @@
 <body>
   <button id="startBtn">Start AR Segmentation</button>
   <canvas id="maskCanvas"></canvas>
-  <canvas id="inputPreview" width="224" height="224"></canvas>
   <div id="info">Status: idle</div>
 
   <script>
     let model;
     let gl, session, glBinding;
-    let cameraProgram, positionBuffer, texCoordBuffer;
-    let posLoc, texLoc, samplerLoc;
     const maskCanvas = document.getElementById('maskCanvas');
     const maskCtx = maskCanvas.getContext('2d');
-    const inputCanvas = document.getElementById('inputPreview');
-    const inputCtx = inputCanvas.getContext('2d');
+    const tempCanvas = new OffscreenCanvas(224, 224);
+    const tempCtx = tempCanvas.getContext('2d');
+    const processingLock = { busy: false };
     let fpsHistory = [];
-
-    const logElem = document.getElementById('info');
-    const logLines = [];
-
-    function log(msg) {
-      logLines.push(msg);
-      logElem.textContent = logLines.join('\n');
-      console.log(msg);
-    }
-
-    window.addEventListener('error', e => {
-      log(`Error: ${e.message}`);
-    });
-
-    window.addEventListener('unhandledrejection', e => {
-      log(`Unhandled: ${e.reason}`);
-    });
-
-    function initCameraQuad(gl) {
-      const vsSource = `attribute vec2 aPosition; attribute vec2 aTexCoord; varying vec2 vTexCoord; void main() { vTexCoord = aTexCoord; gl_Position = vec4(aPosition, 0.0, 1.0); }`;
-      const fsSource = `#extension GL_OES_EGL_image_external : require\nprecision mediump float; varying vec2 vTexCoord; uniform samplerExternalOES uSampler; void main() { gl_FragColor = texture2D(uSampler, vTexCoord); }`;
-      const vs = gl.createShader(gl.VERTEX_SHADER);
-      gl.shaderSource(vs, vsSource);
-      gl.compileShader(vs);
-      const fs = gl.createShader(gl.FRAGMENT_SHADER);
-      gl.shaderSource(fs, fsSource);
-      gl.compileShader(fs);
-      cameraProgram = gl.createProgram();
-      gl.attachShader(cameraProgram, vs);
-      gl.attachShader(cameraProgram, fs);
-      gl.linkProgram(cameraProgram);
-      posLoc = gl.getAttribLocation(cameraProgram, 'aPosition');
-      texLoc = gl.getAttribLocation(cameraProgram, 'aTexCoord');
-      samplerLoc = gl.getUniformLocation(cameraProgram, 'uSampler');
-      positionBuffer = gl.createBuffer();
-      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-      gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([-1, -1, 1, -1, -1, 1, 1, 1]), gl.STATIC_DRAW);
-      texCoordBuffer = gl.createBuffer();
-      gl.bindBuffer(gl.ARRAY_BUFFER, texCoordBuffer);
-      gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([0, 1, 1, 1, 0, 0, 1, 0]), gl.STATIC_DRAW);
-      gl.getExtension('OES_EGL_image_external');
-    }
-
-    function drawCameraFrame(view) {
-      const cameraTex = glBinding.getCameraImage(view.camera);
-      if (!cameraTex) return false;
-      gl.useProgram(cameraProgram);
-      gl.activeTexture(gl.TEXTURE0);
-      gl.bindTexture(gl.TEXTURE_EXTERNAL_OES, cameraTex);
-      gl.uniform1i(samplerLoc, 0);
-      gl.viewport(0, 0, gl.drawingBufferWidth, gl.drawingBufferHeight);
-      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-      gl.enableVertexAttribArray(posLoc);
-      gl.vertexAttribPointer(posLoc, 2, gl.FLOAT, false, 0, 0);
-      gl.bindBuffer(gl.ARRAY_BUFFER, texCoordBuffer);
-      gl.enableVertexAttribArray(texLoc);
-      gl.vertexAttribPointer(texLoc, 2, gl.FLOAT, false, 0, 0);
-      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-      // Ensure the camera frame is fully rendered before it's read back.
-      gl.finish();
-      return true;
-    }
-
-    async function preprocess() {
-      try {
-        if (inputCanvas.width !== 224 || inputCanvas.height !== 224) {
-          inputCanvas.width = inputCanvas.height = 224;
-        }
-        inputCtx.drawImage(gl.canvas, 0, 0, 224, 224);
-        return tf.tidy(() =>
-          tf.browser
-            .fromPixels(gl.canvas, 3)
-            .div(255)
-            .expandDims()
-        );
-      } catch (e) {
-        log('preprocess failed: ' + e.message);
-        throw e;
-      }
-    }
-
-    async function postprocess(maskTensor) {
-      try {
-        await tf.browser.toPixels(
-          tf.tidy(() =>
-            tf.mul(
-              tf.sub(
-                1,
-                tf.image.resizeBilinear(
-                  maskTensor.expandDims(-1),
-                  [maskCanvas.height, maskCanvas.width],
-                  true
-                )
-              ),
-              255
-            ).toInt()
-          ),
-          maskCanvas
-        );
-      } catch (e) {
-        log('postprocess failed: ' + e.message);
-        throw e;
-      }
-    }
 
     async function loadModel() {
       try {
         await tf.setBackend('webgpu');
         await tf.ready();
-        log('Using WebGPU backend');
+        log('Using WebGPU backend\n');
       } catch (e) {
         log('WebGPU init failed, falling back to WebGL...');
         await tf.setBackend('webgl');
         await tf.ready();
-        log('Using WebGL backend');
+        log('Using WebGL backend\n');
       }
       try {
         model = await tf.loadLayersModel('jsModel/model.json');
-        log('Model loaded');
+        log("Model loaded\n");
       } catch (e) {
         log('Model load failed: ' + e.message);
-        throw e;
       }
     }
 
+    function log(msg) {
+      document.getElementById('info').textContent = "Status:\n" + msg;
+    }
+
     async function startAR() {
-      log('Starting AR...');
-      try {
-        await loadModel();
-      } catch (e) {
-        log('Initialization error: ' + e.message);
-        return;
-      }
+      log("Starting AR...");
+      await loadModel();
 
       const canvas = document.createElement('canvas');
-      canvas.width = 224;
-      canvas.height = 224;
       document.body.appendChild(canvas);
-      // Preserve the drawing buffer so createImageBitmap captures the
-      // current camera frame instead of a cleared canvas.
-      gl = canvas.getContext('webgl', {
-        xrCompatible: true,
-        preserveDrawingBuffer: true
-      });
+      gl = canvas.getContext('webgl', { xrCompatible: true });
 
       try {
         session = await navigator.xr.requestSession('immersive-ar', {
@@ -226,74 +100,78 @@
       }
 
       session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
-      glBinding = new XRWebGLBinding(session, gl);
-      initCameraQuad(gl);
       const referenceSpace = await session.requestReferenceSpace('local');
+      glBinding = new XRWebGLBinding(session, gl);
 
       let lastFrameTime = performance.now();
 
-      async function onFrame(time, frame) {
-        const pose = frame.getViewerPose(referenceSpace);
-        if (!pose) {
-          session.requestAnimationFrame(onFrame);
-          return;
-        }
-        const view = pose.views[0];
+      session.requestAnimationFrame(function onFrame(time, frame) {
+        session.requestAnimationFrame(onFrame);
+        if (processingLock.busy) return;
 
-        gl.bindFramebuffer(gl.FRAMEBUFFER, session.renderState.baseLayer.framebuffer);
-        if (!drawCameraFrame(view)) {
-          session.requestAnimationFrame(onFrame);
-          return;
-        }
+        const pose = frame.getViewerPose(referenceSpace);
+        if (!pose) return;
+
+        const view = pose.views[0];
+        const tex = glBinding.getCameraImage(view.camera);
+        if (!tex) return;
+
+        processingLock.busy = true;
+        const w = view.camera.width;
+        const h = view.camera.height;
+
+        const fb = gl.createFramebuffer();
+        gl.bindFramebuffer(gl.FRAMEBUFFER, fb);
+        gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, tex, 0);
 
         const tPreStart = performance.now();
-        const input = await preprocess();
-        const meanVal = (await input.mean().data())[0];
-        log('input mean ' + meanVal.toFixed(3));
-        const tPreEnd = performance.now();
 
-        const tPredictStart = performance.now();
-        const mask = tf.tidy(() => {
-          const pred = model.predict(input).squeeze();
-          return pred.greater(0.5).toFloat();
+        const pixels = new Uint8Array(w * h * 4);
+        gl.readPixels(0, 0, w, h, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
+        const imageData = new ImageData(new Uint8ClampedArray(pixels), w, h);
+
+        createImageBitmap(imageData).then(bitmap => {
+          tempCtx.drawImage(bitmap, 0, 0, 224, 224);
+
+          const input = tf.tidy(() => tf.browser.fromPixels(tempCanvas).toFloat().div(255).expandDims());
+          const tPreEnd = performance.now();
+
+          const prediction = model.predict(input).squeeze();
+
+          prediction.data().then(() => {
+            const tPredictEnd = performance.now();
+            tf.browser.toPixels(tf.sub(1, prediction), tempCanvas).then(() => {
+              const tPostEnd = performance.now();
+              maskCanvas.width = window.innerWidth;
+              maskCanvas.height = window.innerHeight;
+              maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
+              maskCtx.drawImage(tempCanvas.transferToImageBitmap(), 0, 0, maskCanvas.width, maskCanvas.height);
+
+              tf.dispose([input, prediction]);
+              processingLock.busy = false;
+
+              const now = performance.now();
+              const frameTime = now - lastFrameTime;
+              lastFrameTime = now;
+              fpsHistory.push(1000 / frameTime);
+              if (fpsHistory.length > 30) fpsHistory.shift();
+              const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
+
+              log(`Pre: ${(tPreEnd - tPreStart).toFixed(1)}ms\nInfer: ${(tPredictEnd - tPreEnd).toFixed(1)}ms\nPost: ${(tPostEnd - tPredictEnd).toFixed(1)}ms\nFPS: ${avgFps.toFixed(1)}`);
+            });
+          });
         });
-        await tf.nextFrame();
-        const tPredictEnd = performance.now();
-
-        if (
-          maskCanvas.width !== window.innerWidth ||
-          maskCanvas.height !== window.innerHeight
-        ) {
-          maskCanvas.width = window.innerWidth;
-          maskCanvas.height = window.innerHeight;
-        }
-
-        const tPostStart = performance.now();
-        await postprocess(mask);
-        const tPostEnd = performance.now();
-        tf.dispose([input, mask]);
-
-        const now = performance.now();
-        const frameTime = now - lastFrameTime;
-        lastFrameTime = now;
-        fpsHistory.push(1000 / frameTime);
-        if (fpsHistory.length > 30) fpsHistory.shift();
-        const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
-
-        log(
-          `Pre: ${(tPreEnd - tPreStart).toFixed(1)}ms\nInfer: ${(tPredictEnd - tPredictStart).toFixed(1)}ms\nPost: ${(tPostEnd - tPredictEnd).toFixed(1)}ms\nFPS: ${avgFps.toFixed(1)}`
-        );
-
-        session.requestAnimationFrame(onFrame);
-      }
-
-      session.requestAnimationFrame(onFrame);
+      });
 
       document.getElementById('startBtn').style.display = 'none';
     }
 
     document.getElementById('startBtn').addEventListener('click', () => {
-      startAR().catch(e => log('Unexpected error: ' + e.message));
+      try {
+        startAR();
+      } catch (e) {
+        log('Unexpected error: ' + e.message);
+      }
     });
   </script>
 </body>
